[package]
name = "monitor_schedules"
version = "0.1.0"
authors = ["Douglas H. Bradshaw <dhbradshaw@gmail.com>"]
edition = "2018"

[lib]
name = "monitor_schedules"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
reqwest = "0.9.5"