[package]
name = "monitor_schedules"
version = "0.1.0"
authors = ["Douglas H. Bradshaw <dhbradshaw@gmail.com>"]
edition = "2018"

[lib]
name = "monitor_schedules"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"

# Turn off reliance on openssl for reqwest because it's a pain to vendor for aws lambda.
reqwest = { version = "0.9.6", default-features = false, features = ["rustls-tls"]}